--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,70 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+############################################################
+# Node / React / Vite (Frontend)
+############################################################
+
+# Node package directories
+node_modules/
+
+# Dependency directories
+jspm_packages/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Parcel cache
+.cache/
+
+# Vite build output
+dist/
+dist-ssr/
+
+# Vite local environment files
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+
+# Local dev server state
+*.local
+
+# TypeScript metadata
+*.tsbuildinfo
+
+# Editor state (Node side)
+.vscode/
+.webpack/
+.idea/
+
+############################################################
+# System / OS-level files
+############################################################
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+embeddings.db
+*.db
+*.duckdb
